# RUST-PROJECTS

./: .gitignore  README.md  project_structure.txt  rust_roadmap.txt
P2P/1_basic_p2p_chat/: Cargo.toml
P2P/2_bidirectional_p2p_chat/: Cargo.toml
beginner/http-status-checker/: Cargo.toml
beginner/http-status-checker/src/: main.rs
beginner/rust-auth/: .env.example  Cargo.toml
beginner/rust-auth/migrations/: 20250307054014_init.up.sql
beginner/rust-auth/src/db/: mod.rs
beginner/rust-auth/src/db/user/: mod.rs
beginner/rust-auth/src/routes/: home.rs
beginner/todo-app/: Cargo.toml  README.md
beginner/todo-app/src/: main.rs
expert/Zero-cost-abstractions/: Cargo.toml
http-status-checker/src/: main.rs
rust-auth/: Cargo.toml  Dockerfile  README.md
rust-auth/src/: main.rs
rust-auth/src/db/: connection.rs
rust-auth/src/db/user/: model.rs
rust-auth/src/response/: error.rs  mod.rs  response.rs
rust-auth/src/routes/: auth.rs
rust-auth/src/services/: auth.rs
rust-auth/src/utils/: mod.rs
