[package]
name = "rust-auth"
author="Meet Rathod"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls","chrono"] }
