[package]
name = "bidirectional_p2p_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }

[[bin]]
name = "peer"
path = "src/bin/peer.rs"
